src/objects/CntrbnMdl_TSE__c.object
<CustomObject>
    <description>This object allows you to store data for the personnel information about TSE</description>
    <fields>
        <fullName>DateTime_Eastern__c</fullName>
        <label>DateTime(Eastern)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datetime_GMT__c</fullName>
        <label>Datetime(GMT)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datetime_Pacific__c</fullName>
        <label>Datetime(Pacific)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datetime_Singapore__c</fullName>
        <label>Datetime(Singapore)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dont_show_in_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t show in Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enter_Starttime__c</fullName>
        <label>Enter Starttime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_to_Break__c</fullName>
        <label>Hours to Break</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JiveId__c</fullName>
        <label>JiveId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <picklist>
            <picklistValues>
                <fullName>PEAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shift_Length__c</fullName>
        <label>Shift Length</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <picklist>
            <picklistValues>
                <fullName>m-f</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s-w</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w-s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_On_Board__c</fullName>
        <formula>IF( NOT(ISNULL(Start_Date__c)), 
TEXT(FLOOR((TODAY()-Start_Date__c)/365.2425)) &amp; &quot; year(s)&quot; &amp; &quot;, &quot; &amp; 
TEXT(FLOOR(MOD((TODAY()-Start_Date__c),365.2425)/30)) &amp; &quot; month(s) &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time On Board</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Contribution Model TSE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PEAK</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Employee_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>PEAK</value>
        </filters>
        <label>PEAK</label>
    </listViews>
    <listViews>
        <fullName>TSE</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Organization__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>TSE</value>
        </filters>
        <label>TSE</label>
    </listViews>
    <nameField>
        <displayFormat>TSE-{0000000}</displayFormat>
        <label>TSE Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution Model TSE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Date_Cannot_be_in_Future</fullName>
        <active>true</active>
        <description>Support Tech Managers should not enter TSE start date in future.</description>
        <errorConditionFormula>Start_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date of a TSE cannot be in Future.</errorMessage>
    </validationRules>
</CustomObject>